Renamed Organization to Client, replaced the fileds: day, week, month, quarter, year to date.
