# statsservice/api/v1/stats.py
@@ -4,13 +4,14 @@
 from flask import request
 from flask_restx import Namespace, Resource, fields, reqparse, abort
 from flask_restx.inputs import date_from_iso8601
+from datetime import date
+from dateutil.relativedelta import relativedelta
 
 from statsservice.bootstrap import db
-from statsservice.models import Stats, Organization
+from statsservice.models import Stats, Client
 from statsservice.api.v1.common import auth_func, uuid_type
 from statsservice.lib.processors import aggregate_risks, groups_threats
 from statsservice.lib.stats import average_threats
-
 
 stats_ns = Namespace("stats", description="stats related operations")
 
@@ -25,18 +26,12 @@ parser.add_argument(
     required=True,
     choices=("risk", "vulnerability", "threat", "cartography", "compliance"),
 )
-parser.add_argument("day", type=int, help="The number of the day of the year.")
 parser.add_argument(
-    "week", type=int, help="The week of the stats", choices=tuple(range(1, 54))
-)
-parser.add_argument(
-    "month", type=int, help="The month of the stats.", choices=tuple(range(1, 13))
-)
-parser.add_argument(
-    "quarter", type=int, help="The quarter of a year.", choices=(1, 2, 3, 4)
-)
-parser.add_argument(
-    "year", type=int, help="Year of the stats. In full format e.g. 2020."
+    "aggregation_period",
+    type=str,
+    help="The period of the stats aggregation.",
+    required=False,
+    choices=("day", "week", "month", "quarter", "year"),
 )
 parser.add_argument(
     "date_from",
@@ -61,22 +56,8 @@ stats = stats_ns.model(
         "type": fields.String(
             description="The type of this stats (risk, vulnerability, threat, cartography or compliance)."
         ),
-        "day": fields.Integer(description="Number of the day of the year."),
-        "week": fields.Integer(description="Week of the stats."),
-        "month": fields.Integer(description="Month of the stats. From 1 to 12."),
-        "quarter": fields.Integer(
-            description="Number of quarter of a year. Possible values [1,2,3,4]"
-        ),
-        "year": fields.Integer(
-            description="Year of the stats. In full format e.g. 2020."
-        ),
+        "date": fields.Raw(description="The stats date in format 'Y-m-d'"),
         "data": fields.Raw(description="The stats as a dynamic JSON object."),
-        "created_at": fields.DateTime(
-            readonly=True, description="Created time of the stats."
-        ),
-        "updated_at": fields.DateTime(
-            readonly=True, description="Updated time of the stats."
-        ),
     },
 )
 
@@ -107,7 +88,7 @@ stats_list_fields = stats_ns.model(
 
 @stats_ns.route("/")
 class StatsList(Resource):
-    """Shows a list of all stats, and lets you POST to add new stats"""
+    """Shows a list of all the stats, and lets you POST to add new stats"""
 
     @stats_ns.doc("list_stats")
     @stats_ns.expect(parser)
@@ -116,43 +97,42 @@ class StatsList(Resource):
     @auth_func
     def get(self):
         """List all stats"""
-        # get the organization token
+        # get the client token
         token = request.headers.get("X-API-KEY", False)
-        organization = Organization.query.filter(Organization.token == token).first()
+        client = Client.query.filter(Client.token == token).first()
 
         args = parser.parse_args()
         offset = args.pop("page", 1) - 1
         limit = args.pop("per_page", 10)
-        date_from = args.pop("date_from", False)
-        date_to = args.pop("date_to", False)
-        args = {k: v for k, v in args.items() if v not in [None, ""]}
-        args["org_id"] = organization.id
+
+        date_from = args.pop(
+            "date_from",
+            (date.today() + relativedelta(months=-3)).strftime('%Y-%m-%d')
+        )
+        date_to = args.pop(
+            "date_to",
+            date.today().strftime("%Y-%m-%d"))
+        )
+        type = args.pop("type")
 
         result = {
             "data": [],
-            "metadata": {"count": 0, "offset": offset, "limit": limit,},
+            "metadata": {"count": 0, "offset": offset, "limit": limit},
         }
 
         try:
-            query = Stats.query
-            # Filter on defined object attributes:
-            for arg in args:
-                if hasattr(Stats, arg):
-                    query = query.filter(getattr(Stats, arg) == args[arg])
+            query = Stats.query.filter(
+                Stats.type = type,
+                Stats.date >= date_from,
+                Stats.date <= date_to,
+            )
 
-            # Filter on URL defined attributes (not present in the object attributes)
-            if date_from:
-                query = query.filter(
-                    Stats.year >= date_from.year,
-                    Stats.month >= date_from.month,
-                    Stats.day >= date_from.day,
-                )
-            if date_to:
-                query = query.filter(
-                    Stats.year <= date_to.year,
-                    Stats.month <= date_to.month,
-                    Stats.day <= date_to.day,
-                )
+            # TODO: perform aggregation of the results if needed.
+            # TODO: group by anr always by default, will see later for BO, if there should be a separate param.
+#             if args.get("type", "") == "threat":
+#                 groups = groups_threats(results)
+#                 average_threats(results)
+
 
             # Count the result, then paginate
             count = query.count()
@@ -164,11 +144,6 @@ class StatsList(Resource):
         result["data"] = results
         result["metadata"]["count"] = count
 
-        # TODO: define something that will let the client asks for 'aggregated' results
-        if args.get("type", "") == "threat":
-            # groups = groups_threats(results)
-            average_threats(results)
-
         return result, 200
 
     @stats_ns.doc("create_stats")
@@ -177,13 +152,13 @@ class StatsList(Resource):
     @auth_func
     def post(self):
         """Create a new stats"""
-        # set the appropriate organization thanks to the token
+        # set the appropriate client thanks to the token
         token = request.headers.get("X-API-KEY", False)
-        organization = Organization.query.filter(Organization.token == token).first()
+        client = Client.query.filter(Client.token == token).first()
         # create the new stats
         news_stats = []
         for stats in stats_ns.payload:
-            news_stats.append(Stats(**stats, org_id=organization.id))
+            news_stats.append(Stats(**stats, client_id=client.id))
         db.session.bulk_save_objects(news_stats)
         db.session.commit()
         return {}, 204
@@ -209,7 +184,7 @@ class StatsItem(Resource):
         """Delete a stats given its identifier"""
         # TODO: check permissions
         try:
-            Stats.objects(uuid__exact=uuid).delete()
+            Stats.objects(anr__exact=uuid).delete()
             return "", 204
         except:
             abort(404, Error="Impossible to delete the stats.")
